@@ -70,7 +70,6 @@ class TestRestWithRestTemplate extends AbstractRestTestCase {
 
     @Resource
     private HttpClient httpClient;
-
     @Resource
     private RestTemplateBuilder restTemplateBuilder;
 
@@ -131,13 +130,15 @@ class TestRestWithRestTemplate extends AbstractRestTestCase {
         // @formatter:on
 
         final Person[] personArray = restTemplate.getForObject("/rest/person/personList", Person[].class);
+        assertNotNull(personArray);
+
         final List<Person> persons = Arrays.asList(personArray);
 
         assertNotNull(persons);
         assertTrue(persons.size() >= 3);
 
-        assertEquals("Thomas", persons.get(persons.size() - 1).getFirstName());
-        assertEquals("Freese", persons.get(persons.size() - 1).getLastName());
+        assertEquals("Thomas", persons.getLast().getFirstName());
+        assertEquals("Freese", persons.getLast().getLastName());
     }
 
     @Override
@@ -224,6 +225,8 @@ class TestRestWithRestTemplate extends AbstractRestTestCase {
         // @formatter:on
 
         final Person[] personArray = restTemplate.getForObject("/rest/person/personList", Person[].class);
+        assertNotNull(personArray);
+
         final List<Person> persons = Arrays.asList(personArray);
 
         assertNotNull(persons);
@@ -241,6 +244,8 @@ class TestRestWithRestTemplate extends AbstractRestTestCase {
         // @formatter:on
 
         final Person[] personArray = restTemplate.getForObject("/rest/person/personList", Person[].class);
+        assertNotNull(personArray);
+
         final List<Person> persons = Arrays.asList(personArray);
 
         assertNotNull(persons);
@@ -286,7 +291,7 @@ class TestRestWithRestTemplate extends AbstractRestTestCase {
 
         final ResponseEntity<String> responseEntity = restTemplate.getForEntity("/rest/person/personList", String.class);
 
-        //assertEquals(HttpStatus.UNAUTHORIZED, responseEntity.getStatusCode());
+        // assertEquals(HttpStatus.UNAUTHORIZED, responseEntity.getStatusCode());
 
         // Eigentlich UNAUTHORIZED erwartet -> RememberMeServices ?
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
